# pdxfunc-cis194

./: README.md  pdxfunc-cis194.cabal
src/: Week1.hs  Week2.hs  Week3.hs
test/: Main.hs
